Adicionado novo curso a lista

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Docker: Criando containers sem dor de cabeca</li>
         <li>Ansible</li>
         <li>Integração Continua Banco de Dados</li>
+        <li>Curso Online Kubernetes: Pods, Services e ConfigMaps</li>
     </ul>
 </body>
 </html>
